After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 725716 - Fix build of clutter-test-utils.c on Windows
Fix build of clutter-test-utils.c on Windows
Status: RESOLVED FIXED
Product: clutter
Classification: Platform
Component: conformance
1.17.x
Other Windows
: Normal normal
: ---
Assigned To: clutter-maint
clutter-maint
Depends on:
Blocks:
 
 
Reported: 2014-03-05 10:47 UTC by Fan, Chun-wei
Modified: 2014-03-08 10:42 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix build of clutter-test-utils.c on Windows (3.51 KB, patch)
2014-03-05 10:47 UTC, Fan, Chun-wei
committed Details | Review

Description Fan, Chun-wei 2014-03-05 10:47:49 UTC
Created attachment 270973 [details] [review]
Fix build of clutter-test-utils.c on Windows

Hi,

In clutter-test-utils.c, a static variable by the name of "environ" is used, however, this breaks the build on Windows, at least on Visual Studio builds, as it clashes with a #define in Visual Studio's stdlib.h.  This simple patch appends instances of environ in the code with test_, so to avoid the clash.

With blessings, thank you!
Comment 1 Emmanuele Bassi (:ebassi) 2014-03-07 14:36:59 UTC
Review of attachment 270973 [details] [review]:

looks good.
Comment 2 Fan, Chun-wei 2014-03-08 10:42:08 UTC
Hello,

The patch was pushed as acd7d955 on clutter-1.18.

With blessings, thank you!